[package]
name = "lua-macros"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
lua = { version = "*", path = "../lua" }
